routing with children render

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,2 +1,6 @@
-$body-bg: #f5f5f5;
+$light-gray: #f5f5f5;
+
+$turqueese: #04809c;
 $login-btn-txt-color: #FFF;
+$body-bg: $turqueese;
+$side-menu-bg: #FFF;
