--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -7,7 +7,9 @@ body {
     align-items: center;
     justify-content: center;
     height: 100%;
-
+    .header{
+        font-size: 1.3em;
+    }
     .actions-container{
         float:right;
         margin-bottom: 5px;
